--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1>Retro Snake</h1>
       <section class="scores">
         <h2>Score : <span id="spannedScore">0</span></h2>
-        <h2>High Score : <span id="highScore"></span></h2>
+        <h2>High Score : <span id="highScore">0</span></h2>
       </section>
       <main class="gridContainer">
         <section class="grid">
